--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="/portfolio1/homepage.css">
 </head>
 <body>
     <div class="main">
         <div class="navbar">
-            <img src="Vignesh.jpg" class="logo">
+            <img src="/portfolio1/Vignesh.jpg" class="logo">
             <ul >
                 <li ><a href="#" >HOME</a></li>
                 <li ><a href="#" >ABOUT</a></li>
@@ -27,7 +27,7 @@
             <br> 
             <p>Follow me on</p>
         <div class="social">
-            <img src="socialmedia.jpg" class="media">
+            <img src="/portfolio1/socialmedia.jpg" class="media">
         </div>
     </div>
 </body>
